--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,19 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "autoprefixer": "^10.4.13",
+    "axios": "^1.2.3",
+    "classnames": "^2.3.2",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
+    "postcss": "^8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "postcss-preset-env": "^7.8.3",
+    "tailwindcss": "^3.2.4"
   }
 }
