--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "^10.4.13",
     "axios": "^1.2.3",
     "classnames": "^2.3.2",
+    "dayjs": "^1.11.7",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
